# Reasonus-Native

./: .appveyor.yml  .clangd  .gitignore  CMakeLists.txt  FilterDeveloper.ini  LICENSE  README.md  config.h.in  tmp.txt
src/: CMakeLists.txt  main.cpp  reaper_vararg.hpp  res.rc  res.rc_mac_dlg  resource.h
src/actions/: CMakeLists.txt  action_close_all_floating_fx_windows.cpp  action_close_all_floating_fx_windows.hpp  action_fp_8_setting_disable_plugins.cpp  action_fp_8_setting_disable_plugins.hpp  action_fp_8_setting_distraction_free_mode.cpp  action_fp_8_setting_distraction_free_mode.hpp  action_fp_8_setting_fader_reset.cpp  action_fp_8_setting_fader_reset.hpp  action_fp_8_setting_master_fader_mode.cpp  action_fp_8_setting_master_fader_mode.hpp  action_fp_8_setting_momentary_mute_solo.cpp  action_fp_8_setting_momentary_mute_solo.hpp  action_fp_8_setting_swap_shift_buttons.cpp  action_fp_8_setting_swap_shift_buttons.hpp  action_fp_8_setting_untouch_last_touched_param.cpp  action_fp_8_setting_untouch_last_touched_param.hpp  action_fp_v2_setting_control_hidden_tracks.cpp  action_fp_v2_setting_control_hidden_tracks.hpp  action_fp_v2_setting_disable_fader_move.cpp  action_fp_v2_setting_disable_fader_move.hpp  action_fp_v2_setting_endless_track_scroll.cpp  action_fp_v2_setting_endless_track_scroll.hpp  action_fp_v2_setting_momentary_mute_solo.cpp  action_fp_v2_setting_momentary_mute_solo.hpp  action_show_reaper_resource_path.cpp  action_show_reaper_resource_path.hpp  action_toggle_play_cursor.cpp  action_toggle_play_cursor.hpp  action_ui_convert_plugin_zon_to_ini.cpp  action_ui_convert_plugin_zon_to_ini.hpp  action_ui_fp_8_control_panel.cpp  action_ui_fp_8_control_panel.hpp  action_ui_fp_v2_control_panel.cpp  action_ui_fp_v2_control_panel.hpp  action_ui_plugin_type_mapping.cpp  action_ui_plugin_type_mapping.hpp  action_ui_translations_editor.cpp  action_ui_translations_editor.hpp  close_all_floating_fx_windows.cpp  (+37 more)
src/assets/: reasonus-icons.icomoon.json
src/controls/: csurf_button.cpp  csurf_button.hpp  csurf_button_resources.cpp  csurf_button_resources.hpp  csurf_color_button.cpp  csurf_color_button.hpp  csurf_color_button_colors.hpp  csurf_display.cpp  csurf_display.hpp  csurf_display_resources.hpp  csurf_fader.cpp  csurf_fader.hpp  csurf_fader_resources.hpp  (+4 more)
(+320 files in other folders)
